libs/modkit-canonical-errors/tests/ui/missing_reason_on_permission_denied.stderr
error[E0599]: the method `create` exists for struct `ResourceErrorBuilder<ResourceAbsent, NeedsReason>`, but its trait bounds were not satisfied
  --> tests/ui/missing_reason_on_permission_denied.rs:10:55
   |
10 |     let _err = UserResourceError::permission_denied().create();
   |                                                       ^^^^^^ method cannot be called on `ResourceErrorBuilder<ResourceAbsent, NeedsReason>` due to unsatisfied trait bounds
   |
  ::: src/builder.rs
   |
   | pub struct NeedsReason;
   | ---------------------- doesn't satisfy `NeedsReason: ContextResolved`
   |
   = note: the following trait bounds were not satisfied:
           `NeedsReason: ContextResolved`
