libs/modkit-canonical-errors/tests/ui/missing_reason_on_permission_denied.rs
extern crate modkit_canonical_errors;

use modkit_canonical_errors::resource_error;

#[resource_error("gts.cf.core.users.user.v1~")]
struct UserResourceError;

fn main() {
    // permission_denied requires .with_reason() before .create()
    let _err = UserResourceError::permission_denied().create();
}
